--- a/Geo2.html
+++ b/Geo2.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Matéria - Mundocef</title>
+	<title>Geologia/ - Cefhub</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -48,6 +48,7 @@
 			          </li>
 			          <li> 
 			          <a href="gallery.html#Psicologia">Psicologia</a>
+				  </li> 
 			          <li>
 			          <a href="gallery.html#Inglês">Inglês</a>
 			         </li>
@@ -67,9 +68,10 @@
 	</div>
 	<div id="body">
 		<h1><span>geologia</span></h1>
-		<div>
-		    <iframe style="border:none; height: 600px; width: 100%;" 
-			    src="https://zoom.us/wc/{meeting-id}/join?prefer=0&un=TWluZGF1Z2Fz" sandbox="allow-forms allow-scripts allow-same-origin" allow="microphone; camera"></iframe>
+		
+		    <div class="iframe-container" style="overflow: hidden; padding-top: 56.25%; position: relative;">
+    	<iframe allow="microphone; camera" style="border: 0; height: 100%; left: 0; position: absolute; top: 0; width: 100%;" src="https://success.zoom.us/wc/join/{meeting-id}" frameborder="0"></iframe>
+	</div>
 			<div class="article">
 			<h4>Zoom</h4> 
 			
