--- a/Geo2.html
+++ b/Geo2.html
@@ -70,7 +70,7 @@
 		<h1><span>geologia</span></h1>
 		
 		    <div class="iframe-container" style="overflow: hidden; padding-top: 56.25%; position: relative;">
-    	<iframe allow="microphone; camera" style="border: 0; height: 100%; left: 0; position: absolute; top: 0; width: 100%;" src="https://success.zoom.us/wc/join/{meeting-id}" frameborder="0"></iframe>
+    	<iframe allow="microphone; camera" style="border: 0; height: 100%; left: 0; position: absolute; top: 0; width: 100%;" src="https://zoom.us/wc/join/825227050" frameborder="0"></iframe>
 	</div>
 			<div class="article">
 			<h4>Zoom</h4> 
