--- a/fil2.html
+++ b/fil2.html
@@ -77,7 +77,7 @@
 			<div class="article">
 				<h4>Filosofia africana e Sócrates</h4>
 				<div class="container">
-					<iframe src="https://docs.google.com/document/d/e/2PACX-1vSc3sZLUH2l1HY7eR1JnksvMpP9xapbKerhW0TJjaoGi2PbVh5qsH8lJ7YdV9eaGsRpu-6iLhuYtw2e/pub?embedded=true"></iframe>
+					<iframe src="https://docs.google.com/document/d/e/2PACX-1vSc3sZLUH2l1HY7eR1JnksvMpP9xapbKerhW0TJjaoGi2PbVh5qsH8lJ7YdV9eaGsRpu-6iLhuYtw2e/pub?embedded=true" width="100%" height="600px"></iframe>
 				</div>
 			</div>
 		</div>
