--- a/fil2.html
+++ b/fil2.html
@@ -77,7 +77,7 @@
 			<div class="article">
 				<h4>Filosofia africana e Sócrates</h4>
 				<div class="container">
-					<iframe src="https://drive.google.com/file/d/1JHd2qm8qBphlAzK3k2rR5_YlhdmUl9UA/pub?embedded=true" width="640" height="480"></iframe>
+					<iframe src="https://drive.google.com/file/d/1JHd2qm8qBphlAzK3k2rR5_YlhdmUl9UA/preview" width="640" height="480"></iframe>
 				</div>
 			</div>
 		</div>
