--- a/fil2.html
+++ b/fil2.html
@@ -77,7 +77,9 @@
 			<div class="article">
 				<h4>Filosofia africana e Sócrates</h4>
 				<div class="container">
-					<iframe src="https://drive.google.com/file/d/1JHd2qm8qBphlAzK3k2rR5_YlhdmUl9UA/preview" width="100%" height="600px"></iframe>
+					 <iframe  style="width:600px;height:375px"  src="https://online.pubhtml5.com/sgof/stkt/index.html"  
+seamless="seamless" scrolling="no" frameborder="0" 
+allowtransparency="true" allowfullscreen="true"></iframe>
 				</div>
 			</div>
 		</div>
