--- a/fil3.html
+++ b/fil3.html
@@ -77,8 +77,8 @@
 			<div class="article">
 				<h4>Falácias e Silogismos</h4>
 				<div class="container">
-					<iframe src="https://drive.google.com/file/d/1DzQyXXjMZ3mihucCdEOt6xw-pTml5I6T/preview" width="100%" height="600px"></iframe>
-				  
+					<iframe  style="width:300px;height:500px"  src="index.html" seamless="seamless" scrolling="no" frameborder="0"
+allowtransparency="true"></iframe>    
 				</div>
 			</div>
 		</div>
