--- a/fil4.html
+++ b/fil4.html
@@ -77,7 +77,8 @@
 			<div class="article">
 				<h4>Filosofia da linguagem</h4>
 				<div class="container">
-					<iframe src="https://drive.google.com/file/d/1yDWC0sUiCHtNdrYZEWtPJvlpD82eikJF/preview" width="100%" height="600px"></iframe>
+				  <iframe  style="width:300px;height:500px"  src="index.html" seamless="seamless" scrolling="no" frameborder="0"
+allowtransparency="true"></iframe>
 				</div>
 			</div>
 		</div>
