--- a/fil4.html
+++ b/fil4.html
@@ -77,8 +77,7 @@
 			<div class="article">
 				<h4>Filosofia da linguagem</h4>
 				<div class="container">
-				  <iframe  style="width:300px;height:500px"  src="index.html" seamless="seamless" scrolling="no" frameborder="0"
-allowtransparency="true"></iframe>
+				 <iframe style='width:300px;height:500px' src='https://online.pubhtml5.com/sgof/aunc/'  seamless='seamless' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true' ></iframe>
 				</div>
 			</div>
 		</div>
