--- a/gallery-single-post1.html
+++ b/gallery-single-post1.html
@@ -77,7 +77,7 @@
 			<div class="article">
 				<h4>O movimento é relativo? (PDF)</h4>
 				<div class="container">
-					<iframe src="https://drive.google.com/file/d/1fOowCChQgFrUihStJAHiAJ61QFM7-0Fz/preview" width="100%" height="600px"></iframe>
+					<iframe style='width:100px;height:600px' src='https://online.pubhtml5.com/sgof/hagn/'  seamless='seamless' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true' ></iframe>
 				</div>
 			
 			</div>
