--- a/gallery-single-post6.html
+++ b/gallery-single-post6.html
@@ -74,7 +74,7 @@
 				<h4>Fórmulas pdf</h4>
 				
 				<div class="container">
-				  <iframe src="https://drive.google.com/file/d/1YPfvzUMmv6MS5D04ySsBbb2DlBnkPhGR/preview" width="100%" height="600px"></iframe> 
+				  <iframe style='width:200px;height:600px' src='https://online.pubhtml5.com/sgof/kwlb/'  seamless='seamless' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true' ></iframe>
 				</div>
 				
 		</div>
