--- a/Geo2.html
+++ b/Geo2.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Geologia/ - Cefhub</title>
+	<title>Geologia/Sem conteúdo - Cefhub</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -69,11 +69,9 @@
 	<div id="body">
 		<h1><span>geologia</span></h1>
 		
-		    <div class="iframe-container" style="overflow: hidden; padding-top: 56.25%; position: relative;">
-    	<iframe allow="microphone; camera" style="border: 0; height: 100%; left: 0; position: absolute; top: 0; width: 100%;" src="https://zoom.us/wc/join/825227050" frameborder="0"></iframe>
-	</div>
+		
 			<div class="article">
-			<h4>Zoom</h4> 
+			<h4>Sem conteúdo...</h4> 
 			
 				
 			</div>
