--- a/gallery.html
+++ b/gallery.html
@@ -60,7 +60,7 @@
 				<a href="blog.html">blog</a>
 			</li>
 			<li>
-				<a href="contact.html">contact</a>
+				<a href="contact.html">contactos</a>
 			</li>
 		</ul>
 	</div>
