--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
 		</ul>
 	</div>
 	<div id="body">
-		<h1><span>EM CASO DE DÚVIDAS PUXA</span></h1>
+		<h1><span>EM CASO DE DÚVIDAS, PUXA.</span></h1>
 		<form action="thankyou/" method="post">
 			<input type="text" name="fname" id="fname" value="nome">
 			<input type="text" name="address" id="address" value="endereço">
