--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
 				
 				<h3>COMO PRETENDEMOS AJUDAR?</h3>
 				<p>
-				   Pretendemos dar a resolução das tarefas, dar dicas de como resolver exercícios, e explicação de alguns conceitos. Mas em caso de dificuldades sérias, não hesita em contactar os professores.
+				   Pretendemos postar os conteúdos enviados pelos professores, dar a resolução das tarefas, dar dicas de como resolver exercícios, e explicação de alguns conceitos. Mas em caso de dificuldades sérias, não hesita em contactar os professores.
 				</p>
 				
 				<h3>A NOSSA MISSÃO</h3>
