--- a/blog-single-post3.html
+++ b/blog-single-post3.html
@@ -71,7 +71,7 @@
 			<div class="article">
 				
 			     <div class="container">
-				    <iframe src="https://drive.google.com/file/d/1ngxoanPxzGZtCTkxZ4GbShZs4V3U1czT/preview" width="100%" height="600px"></iframe> 
+				    <iframe style='width:250px;height:500px' src='https://online.pubhtml5.com/sgof/ypzs/'  seamless='seamless' scrolling='yes' frameborder='0' allowtransparency='true' allowfullscreen='true' ></iframe>
 				</div>
 			</div>
 		</div>
