--- a/mat6.html
+++ b/mat6.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Matemática/Exercícios sobre equação logarítmica- Cefhub</title>
+	<title>Matemática/Exercícios sobre equação logarítmica pt2- Cefhub</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -71,9 +71,8 @@
 	<div id="body">
 		<h1><span>Matemática</span></h1>
 		<div>
-			<iframe width="300" height="400" src="https://drive.google.com/file/d/1TIYGL2nlLYVg3nLeveKpsMHZ9Azn_G5A/preview" 
+			<iframe width="300" height="400" src="https://www.youtube.com/embed/jnvwHxvdvus"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			
 			<div class="article">
 				<h4>Exercícios sobre equação logarítmica pt2</h4>
 			</div>
