--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Cefhub</title>
+	<title>Cefhub12</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -22,7 +22,7 @@
 				<a href="about.html">sobre Nós</a>
 			</li>
 			<li>
-				<a href="gallery.html">matéria</a>
+				<a href="gallery.html">Aulas online</a>
 				<ul class="sub-menu">          
 					 <li>
 					    <a href="gallery.html#Física">Física</a>
