--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@
 				<a href="about.html">sobre Nós</a>
 			</li>
 			<li>
-				<a href="gallery.html">matéria</a>
+				<a href="gallery.html">Aulas online</a>
 				<ul class="sub-menu"> 
 					     <li>
 					    <a href="gallery.html#Física">Física</a>
