--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 				<a href="about.html">sobre nós</a>
 			</li>
 			<li>
-				<a href="gallery.html">matéria</a>
+				<a href="gallery.html">Aulas online</a>
 				<ul class="sub-menu"> 
 					     <li>
 					    <a href="gallery.html#Física">Física</a>
@@ -69,15 +69,7 @@
 		</ul>
 	</div>
 	<div id="body">
-		<h1><span>EM CASO DE DÚVIDAS, PUXA.</span></h1>
-		<form action="thankyou/" method="post">
-			<input type="text" name="fname" id="fname" value="nome">
-			<input type="text" name="address" id="address" value="endereço">
-			<input type="text" name="email" id="email" value="email">
-			<input type="text" name="phone" id="phone" value="número do telefone">
-			<textarea name="message" id="message">message</textarea>
-			<input type="submit" name="send" id="send" value="enviar">
-		</form>
+		<h1 href="https://cefhub.github.io/Cefhub20/index.html">12Classe</h1>
 	</div>
 	<div id="footer">
 		<div>
