--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<img src="images/back1.jpg" alt="">
 			<div>
 				<h2>CEFHUb</h2>
-				<span>Matéria, Tarefas, Explicações</span>
+				<span>Matéria, Vídeo aulas , Explicações</span>
 				<span>Para os alunos da 12/F.B</span>
 				<span>Desde 5/5/2020.</span>
 				<a href="gallery.html" class="more">VER MAIS</a>
