--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,17 @@
 		</ul>
 	</div>
 	<div id="body">
-		<h1 href="https://cefhub.github.io/Cefhub20/index.html">12Classe</h1>
+	   <div id="featured">
+		   <img src="images/back1.jpg" alt="">
+		   <div>
+				<h2>Link para outras classes.</h2>
+				<span>Cefhub-11.ªClasse</span>
+				<span>Cefhub-10.ªClasse</span>
+				<span>Cefhub-9.ªClasse</span>
+				<span>Cefhub-8.ªClasse</span>
+			        <span>Cefhub-7.ªClasse</span>
+				<a href="Blog.html" class="more">Ler mais</a>
+			</div>
 	</div>
 	<div id="footer">
 		<div>
