--- a/contact.html
+++ b/contact.html
@@ -73,8 +73,11 @@
 		   <img src="images/back1.jpg" alt="">
 		   <div>
 				<h2>Link para outras classes.</h2>
-				<span>Cefhub-11.ªClasse</span>
-				<span>Cefhub-10.ªClasse</span>
+			        <span>Cefhub-12.ªClasse(C.E.J)</span>
+			        <span>Cefhub-11.ªClasse(C.F.B)</span>
+			        <span>Cefhub-11.ªClasse(C.E.J)</span>
+				<span>Cefhub-10.ªClasse(C.F.B)</span>
+			        <span>Cefhub-10.ªClasse(C.E.J)</span>
 				<span>Cefhub-9.ªClasse</span>
 				<span>Cefhub-8.ªClasse</span>
 			        <span>Cefhub-7.ªClasse</span>
