--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
 		   <img src="images/back1.jpg" alt="">
 		   <div>
 				<h2>Link para outras classes.</h2>
-			        <span>Cefhub-12.ªClasse(C.E.J)</span>
+			   <a href="#"><span>Cefhub-12.ªClasse(C.E.J)</span></a>
 			        <span>Cefhub-11.ªClasse(C.F.B)</span>
 			        <span>Cefhub-11.ªClasse(C.E.J)</span>
 				<span>Cefhub-10.ªClasse(C.F.B)</span>
@@ -81,7 +81,7 @@
 				<span>Cefhub-9.ªClasse</span>
 				<span>Cefhub-8.ªClasse</span>
 			        <span>Cefhub-7.ªClasse</span>
-				<a href="Blog.html" class="more">Ler mais</a>
+				<a href="about.html" class="more">Ler mais</a>
 			</div>
 	</div>
 	<div id="footer">
