--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Contact - Cefhub</title>
+	<title>2.º Ciclo - Cefhub</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -74,13 +74,13 @@
 		   <div>
 				<h2>Link para outras classes.</h2>
 			   <a href="#"><span>Cefhub-12.ªClasse(C.E.J)</span></a>
-			        <span>Cefhub-11.ªClasse(C.F.B)</span>
-			        <span>Cefhub-11.ªClasse(C.E.J)</span>
-				<span>Cefhub-10.ªClasse(C.F.B)</span>
-			        <span>Cefhub-10.ªClasse(C.E.J)</span>
-				<span>Cefhub-9.ªClasse</span>
-				<span>Cefhub-8.ªClasse</span>
-			        <span>Cefhub-7.ªClasse</span>
+			   <a href="#"><span>Cefhub-11.ªClasse(C.F.B)</span></a>
+			   <a href="#"><span>Cefhub-11.ªClasse(C.E.J)</span></a>
+			   <a href="#"><span>Cefhub-10.ªClasse(C.F.B)</span></a>
+			   <a href="#"><span>Cefhub-10.ªClasse(C.E.J)</span></a>
+			   <a href="#"><span>Cefhub-9.ªClasse</span></a>
+			   <a href="#"><span>Cefhub-8.ªClasse</span></a>
+			   <a href="#"><span>Cefhub-7.ªClasse</span></a>
 				<a href="about.html" class="more">Ler mais</a>
 			</div>
 	</div>
