--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>2.º Ciclo - Cefhub</title>
+	<link rel="shortcut icon" type="images/x-icon" href="images/favicon.png">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -64,7 +65,7 @@
 				<a href="blog.html">blog</a>
 			</li>
 			<li class="selected">
-				<a href="contact.html">contactos</a>
+				<a href="contact.html">2.ºCiclo</a>
 			</li>
 		</ul>
 	</div>
