--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<a href="blog.html">blog</a>
 			</li>
 			<li>
-				<a href="contact.html">contactos</a>
+				<a href="contact.html">2.ºCiclo</a>
 			</li>
 		</ul>
 	</div>
