--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>2.º Ciclo - Cefhub</title>
+	<title>2.ºCiclo-Cefhub</title>
 	<link rel="shortcut icon" type="images/x-icon" href="images/favicon.png">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
@@ -73,9 +73,9 @@
 	   <div id="featured">
 		   <img src="images/back1.jpg" alt="">
 		   <div>
-				<h2>Link para outras classes.</h2>
-			   <a href="#"><span>Cefhub-12.ªClasse(C.E.J)</span></a>
-			   <a href="#"><span>Cefhub-11.ªClasse(C.F.B)</span></a>
+				<h2>Link para as outras classes.</h2>
+			   <a href="#"><h1>Cefhub-12.ªClasse(C.E.J)</h1></a>
+			   <a href="#"><h1>Cefhub-11.ªClasse(C.F.B)</h1></a>
 			   <a href="#"><span>Cefhub-11.ªClasse(C.E.J)</span></a>
 			   <a href="#"><span>Cefhub-10.ªClasse(C.F.B)</span></a>
 			   <a href="#"><span>Cefhub-10.ªClasse(C.E.J)</span></a>
