--- a/contact.html
+++ b/contact.html
@@ -74,8 +74,8 @@
 		   <img src="images/back1.jpg" alt="">
 		   <div>
 				<h2>Link para as outras classes.</h2>
-			   <a href="#"><h1>Cefhub-12.ªClasse(C.E.J)</h1></a>
-			   <a href="#"><h1>Cefhub-11.ªClasse(C.F.B)</h1></a>
+			   <a href="#">Cefhub-12.ªClasse(C.E.J)</a>
+			   <a href="#">Cefhub-11.ªClasse(C.F.B)</a>
 			   <a href="#"><span>Cefhub-11.ªClasse(C.E.J)</span></a>
 			   <a href="#"><span>Cefhub-10.ªClasse(C.F.B)</span></a>
 			   <a href="#"><span>Cefhub-10.ªClasse(C.E.J)</span></a>
