--- a/contact.html
+++ b/contact.html
@@ -76,12 +76,12 @@
 				<h2>Link para as outras classes.</h2>
 			   <a href="#">Cefhub-12.ªClasse(C.E.J)</a>
 			   <a href="#">Cefhub-11.ªClasse(C.F.B)</a>
-			   <a href="#"><span>Cefhub-11.ªClasse(C.E.J)</span></a>
-			   <a href="#"><span>Cefhub-10.ªClasse(C.F.B)</span></a>
-			   <a href="#"><span>Cefhub-10.ªClasse(C.E.J)</span></a>
-			   <a href="#"><span>Cefhub-9.ªClasse</span></a>
-			   <a href="#"><span>Cefhub-8.ªClasse</span></a>
-			   <a href="#"><span>Cefhub-7.ªClasse</span></a>
+			   <a href="#">Cefhub-11.ªClasse(C.E.J)</a>
+			   <a href="#">Cefhub-10.ªClasse(C.F.B)</a>
+			   <a href="#">Cefhub-10.ªClasse(C.E.J)</a>
+			   <a href="#">Cefhub-9.ªClasse</a>
+			   <a href="#">Cefhub-8.ªClasse</a>
+			   <a href="#">Cefhub-7.ªClasse</a>
 				<a href="about.html" class="more">Ler mais</a>
 			</div>
 	</div>
