--- a/Geo4.html
+++ b/Geo4.html
@@ -22,7 +22,7 @@
 				<a href="about.html">sobre nós</a>
 			</li>
 			<li class="selected">
-				<a href="gallery.html">matéria</a>
+				<a href="gallery.html">Aulas online</a>
 				<ul class="sub-menu"> 
                                        <li>
 					    <a href="gallery.html#Física">Física</a>
@@ -61,7 +61,7 @@
 				<a href="blog.html">blog</a>
 			</li>
 			<li>
-				<a href="contact.html">contact</a>
+				<a href="contact.html">2.ºciclo</a>
 			</li>
 		</ul>
 	</div>
