--- a/blog-single-post2.html
+++ b/blog-single-post2.html
@@ -22,7 +22,7 @@
 				<a href="about.html">sobre nós</a>
 			</li>
 			<li>
-				<a href="gallery.html">matéria</a>
+				<a href="gallery.html">Aulas online/a>
 				<ul class="sub-menu"> 
 					
                                        <li>
@@ -63,7 +63,7 @@
 				<a href="blog.html">blog</a>
 			</li>
 			<li>
-				<a href="contact.html">contact</a>
+				<a href="contact.html">2.ºciclo</a>
 			</li>
 		</ul>
 	</div>
