--- a/lp6.html
+++ b/lp6.html
@@ -22,7 +22,7 @@
 				<a href="about.html">sobre nós</a>
 			</li>
 			<li class="selected">
-				<a href="gallery.html">Matéria</a>
+				<a href="gallery.html">Aulas online</a>
 			</li>
 			  <ul class="sub-menu"> 
                                        <li>
@@ -61,7 +61,7 @@
 				<a href="blog.html">blog</a>
 			</li>
 			<li>
-				<a href="contact.html">contact</a>
+				<a href="contact.html">2.ºciclo</a>
 			</li>
 		</ul>
 	</div>
