--- a/mat6.html
+++ b/mat6.html
@@ -23,7 +23,7 @@
 				<a href="about.html">sobre nós</a>
 			</li>
 			<li class="selected">
-				<a href="gallery.html">Matéria</a>
+				<a href="gallery.html">Aulas online</a>
 				<ul class="sub-menu"> 
 					
                                        <li>
@@ -64,7 +64,7 @@
 				<a href="blog.html">blog</a>
 			</li>
 			<li>
-				<a href="contact.html">contact</a>
+				<a href="contact.html">2.ºciclo</a>
 			</li>
 		</ul>
 	</div>
