--- a/psi6.html
+++ b/psi6.html
@@ -4,7 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Matéria - Mundocef</title>
+	<title>Matéria-Cefhub</title>
+	<link rel="shortcut icon" type="images/x-icon" href="images/favicon.png">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -22,7 +23,7 @@
 				<a href="about.html">sobre nós</a>
 			</li>
 			<li class="selected">
-				<a href="gallery.html">Matéria</a>
+				<a href="gallery.html">Aulas online</a>
 			</li>
 			  
 			<li><ul class="sub-menu"> 
@@ -60,7 +61,7 @@
 				<a href="blog.html">blog</a>
 			</li>
 			<li>
-				<a href="contact.html">contact</a>
+				<a href="contact.html">2.ºciclo</a>
 			</li>
 		</ul>
 	</div>
