--- a/qui1.html
+++ b/qui1.html
@@ -22,7 +22,7 @@
 				<a href="about.html">sobre nós</a>
 			</li>
 			<li class="selected">
-				<a href="gallery.html">Matéria</a>
+				<a href="gallery.html">Aulas online</a>
 				<ul class="sub-menu"> 
 					 <li>
 					    <a href="gallery.html#Física">Física</a>
@@ -63,7 +63,7 @@
 				<a href="blog.html">blog</a>
 			</li>
 			<li>
-				<a href="contact.html">contactos</a>
+				<a href="contact.html">2.ºCiclo</a>
 			</li>
 		</ul>
 	</div>
