--- a/qui5.html
+++ b/qui5.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Química/Hidrocarbonetos aromáticos pt4 - Mundocef</title>
+	<title>Química/Hidrocarbonetos aromáticos pt4-Cefhub</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -22,7 +22,7 @@
 				<a href="about.html">sobre nós</a>
 			</li>
 			<li class="selected">
-				<a href="gallery.html">Matéria</a>
+				<a href="gallery.html">Aulas online</a>
 				<ul class="sub-menu"> 
 					 <li>
 					    <a href="gallery.html#Física">Física</a>
@@ -61,7 +61,7 @@
 				<a href="blog.html">blog</a>
 			</li>
 			<li>
-				<a href="contact.html">contactos</a>
+				<a href="contact.html">2.ºCiclo</a>
 			</li>
 		</ul>
 	</div>
