--- a/qui6.html
+++ b/qui6.html
@@ -22,7 +22,7 @@
 				<a href="about.html">sobre nós</a>
 			</li>
 			<li class="selected">
-				<a href="gallery.html">Matéria</a>
+				<a href="gallery.html">Aulas online</a>
 				<ul class="sub-menu"> 
 					 <li>
 					    <a href="gallery.html#Física">Física</a>
