--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Blog - Cefhub</title>
+	<title>Blog-Cefhub</title>
+	<link rel="shortcut icon" type="images/x-icon" href="images/favicon.png">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
