--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<div>
 				<h2>CEFHUb</h2>
 				<span>Matéria, Vídeo aulas , Explicações</span>
-				<span>Para os alunos da 12/F.B</span>
+				<span>Para os alunos da 12.ªClasse(C.F.B)</span>
 				<span>Desde 5/5/2020.</span>
 				<a href="gallery.html" class="more">VER MAIS</a>
 			</div>
