--- a/blog-single-post1.html
+++ b/blog-single-post1.html
@@ -68,16 +68,16 @@
 		</ul>
 	</div>
 	<div id="body">
-		<h1><span>Para usurários de IOS e Android</span></h1>
+		<h1><span>AECEFB Instragram</span></h1>
 		<div>
-			<img src="images/back2.jpg" alt="">
+			<center><script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-4ded44bc-cf81-4e15-86bd-08caf7e72ebe"></div></center>
 
 
 			<div class="article">
-				<h2>Para usurários de IOS e Android </h2>
+				<h2>Associação de Estudantes 2020 </h2>
 				<p>
-			            Para a melhor experiência durante as visitas no site Cefhub, recomendamos o uso de um computador Mac ou Windows. Caso não tenha acesso aos mesmos,
-				os dispositivos IOS e Android serão eficazes.
+			        Sejam bem-vindos ao Instagram da AECEF Benfica 2020.
 				</p>
 			</div>
 		</div>
