--- a/blog.html
+++ b/blog.html
@@ -73,12 +73,12 @@
 			<ul>
 				<li>
 					<a href="blog-single-post1.html" class="figure">
-						<img src="images/blog1.jpg" alt="">
+						<img src="images/blog3.png" alt="">
 					</a>
 					<div>
-						<h3>Para usurários de IOS e Android</h3>
+						<h3>aecefb Instagram</h3>
 						<p>
-						      Para a melhor experiência durante as visitas no site, Cefhub, recomendamos o...
+						      Sejam bem-vindos ao Instagram da AECEF Benfica 2020.
 						</p>
 						<a href="blog-single-post1.html" class="more">ler isto</a>
 					</div>
