--- a/blog.html
+++ b/blog.html
@@ -110,6 +110,18 @@
 					</div>
 					
 				</li>
+				<li>
+					<a href="blog-single-post1.html" class="figure">
+						<img src="images/blog3.png" alt="">
+					</a>
+					<div>
+						<h3>Coronavírus</h3>
+						<p>
+						      Covid-19.
+						</p>
+						<a href="blog-single-post1.html" class="more">ler isto</a>
+					</div>
+				</li>
 				
 			</ul>
 		</div>
