--- a/blog.html
+++ b/blog.html
@@ -84,6 +84,18 @@
 					</div>
 				</li>
 				<li>
+					<a href="blog-single-post4.html" class="figure">
+						<img src="images/covid.png" alt="">
+					</a>
+					<div>
+						<h3>Coronavírus</h3>
+						<p>
+						      Situação atual do Covid-19...
+						</p>
+						<a href="blog-single-post1.html" class="more">ler isto</a>
+					</div>
+				</li>
+				<li>
 					<a href="blog-single-post2.html" class="figure">
 						<img src="images/calblog.jpeg" alt="">
 					</a>
@@ -109,18 +121,6 @@
 						<a href="blog-single-post3.html" class="more">ler isto</a>
 					</div>
 					
-				</li>
-				<li>
-					<a href="blog-single-post1.html" class="figure">
-						<img src="images/blog3.png" alt="">
-					</a>
-					<div>
-						<h3>Coronavírus</h3>
-						<p>
-						      Covid-19.
-						</p>
-						<a href="blog-single-post1.html" class="more">ler isto</a>
-					</div>
 				</li>
 				
 			</ul>
