--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
 			   <a href="#">Cefhub-10.ªClasse(C.E.J)</a>
 			   <a href="#">Cefhub-9.ªClasse</a>
 			   <a href="#">Cefhub-8.ªClasse</a>
-			   <a href="#">Cefhub-7.ªClasse</a>
+			   <a href="https://cefhub.github.io/Cefhub7/index.html">Cefhub-7.ªClasse</a>
 				<a href="about.html" class="more">Ler mais</a>
 			</div>
 	</div>
