--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
 				<a href="blog.html">blog</a>
 			</li>
 			<li class="selected">
-				<a href="contact.html">2.ºCiclo</a>
+				<a href="contact.html">1/2.ºCiclo</a>
 			</li>
 		</ul>
 	</div>
