--- a/fil1.html
+++ b/fil1.html
@@ -60,7 +60,7 @@
 				<a href="blog.html">blog</a>
 			</li>
 			<li>
-				<a href="contact.html">2.ºciclo</a>
+				<a href="contact.html">1/2.ºciclo</a>
 			</li>
 		</ul>
 	</div>
