--- a/qui2.html
+++ b/qui2.html
@@ -62,7 +62,7 @@
 				<a href="blog.html">blog</a>
 			</li>
 			<li>
-				<a href="contact.html">2.ºCiclo</a>
+				<a href="contact.html">1/2.ºCiclo</a>
 			</li>
 		</ul>
 	</div>
