--- a/qui4.html
+++ b/qui4.html
@@ -61,7 +61,7 @@
 				<a href="blog.html">blog</a>
 			</li>
 			<li>
-				<a href="contact.html">contactos</a>
+				<a href="contact.html">1/2.ºciclo</a>
 			</li>
 		</ul>
 	</div>
