--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@ window.smartsupp||(function(d) {
 </script>
 </head>
 <body>
+	<script type="text/javascript">
+  (function(w,d,t,u,n,s,e){w['SwiftypeObject']=n;w[n]=w[n]||function(){
+  (w[n].q=w[n].q||[]).push(arguments);};s=d.createElement(t);
+  e=d.getElementsByTagName(t)[0];s.async=1;s.src=u;e.parentNode.insertBefore(s,e);
+  })(window,document,'script','//s.swiftypecdn.com/install/v2/st.js','_st');
+  
+  _st('install','r-2qx2-vHY8sJveGhmfA','2.0.0');
+</script>
 	<div id="header">
 		<a href="index.html" class="logo">
 			<img src="images/cef.png" alt="">
