--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
 			<div class="article">
 				<h3>UMA CALOROSA RECEPÇÃO</h3>
 				  <p>
-			              Sejam bem-vindos ao Cefhub, um site de conteúdos online para todas as classes do 2.ºciclo.
+			              Sejam bem-vindos ao Cefhub, um site de conteúdos online para todas as classes do 1.ºciclo (Ensino secundário) e d0 2.ºciclo.
 					  Nosso objetivo é proporcionar uma aprendizagem mais profunda durante o estado de calamidade
                                         para que os alunos possam liberar seu potencial dentro e muito além da sala de aula.
 				</p>
