--- a/mat1.html
+++ b/mat1.html
@@ -67,6 +67,8 @@
 	<div id="body">
 		<h1><span>Matemática</span></h1>
 		<div>
+			       <a href="#" class="previous"> Anterior</a>
+			       <a href="mat2.html" class="next"> Próximo</a>
 			<iframe width="300" height="400" src="https://www.youtube.com/embed/HlGPnHkX5Fo"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<div class="article">
