--- a/mat1.html
+++ b/mat1.html
@@ -71,8 +71,8 @@
 			<iframe width="300" height="400" src="https://www.youtube.com/embed/HlGPnHkX5Fo"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<div class="article">
-			       <a href="#" class="previous"> Anterior</a>
-			       <a href="mat2.html" class="next"> Próximo</a>				
+			       <a href="#" class="previous">&laquo; Anterior</a>
+			       <a href="mat2.html" class="next"> Próximo &raquo;</a>				
 				<h4>Revisão sobre a definição e cálculo de logaritmo</h4>
 			</div>
 		</div>
