--- a/mat1.html
+++ b/mat1.html
@@ -73,7 +73,7 @@
 			<div class="article">				
 				<h4>Revisão sobre a definição e cálculo de logaritmo</h4>
 				
-				<a href="#" class="previous">&laquo; Anterior</a>
+				<a href="mat2.html" class="previous">&laquo; Anterior</a>
 				
 			        <a href="mat2.html" class="next"> Próximo &raquo;</a>
 			</div>
