--- a/mat2.html
+++ b/mat2.html
@@ -71,6 +71,8 @@
 			<iframe width="300" height="400" src="https://www.youtube.com/embed/L6qDyb2w7sY"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<div class="article">
+				<a href="mat1.html" class="previous">&laquo; Anterior</a> 
+				<a href="mat3.html" class="next"> Próximo &raquo;</a>
 				<h4>Propriedade dos logaritimos</h4>
 			</div>
 		</div>
