--- a/qui1.html
+++ b/qui1.html
@@ -70,7 +70,7 @@
 	<div id="body">
 		<h1><span>Química</span></h1>
 		<div>
-			<iframe width="300" height="400" src="https://www.youtube.com/embed/U1OfSzZydA4?modestbranding=1&rel=0&autoplay=1&controls=1"
+			<iframe width="300" height="400" src="https://www.youtube.com/embed/U1OfSzZydA4?modestbranding=1&rel=0&autoplay=1&controls=1&showinfo=0"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<div class="article">
 				<h4>Hidrocarbonetos pt1</h4>
