--- a/fil1.html
+++ b/fil1.html
@@ -67,7 +67,7 @@
 	<div id="body">
 		<h1><span>Filosofia</span></h1>
 		<div>
-			<iframe width="300" height="400" src="https://www.youtube.com/embed/c-KFHR8aGS8"
+			<iframe width="300" height="400" src="https://www.youtube.com/embed/c-KFHR8aGS8?modestbranding=1&rel=0&autoplay=1&controls=1&showinfo=0"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<div class="article">
 				<h4>Filosofia Africana</h4>
