--- a/gallery-single-post5.html
+++ b/gallery-single-post5.html
@@ -67,8 +67,9 @@
 	<div id="body">
 		<h1><span>fisica</span></h1>
 		<div>
-			<iframe width="300" height="400" src="https://www.youtube.com/embed/Xz39S8upyxo"
+			<iframe width="300" height="400" src="https://www.youtube.com/embed/Xz39S8upyxo?modestbranding=1&rel=0&autoplay=1&controls=1&showinfo=0"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 			<div class="article">
 				<h4>Centro de Massa pt2</h4>
 			</div>
