--- a/ing2.html
+++ b/ing2.html
@@ -69,7 +69,7 @@
 	<div id="body">
 		<h1><span>Inglês</span></h1>
 		<div>
-			<iframe width="300" height="400" src="https://www.youtube.com/embed/JMTFBq4jbt0"
+			<iframe width="300" height="400" src="https://www.youtube.com/embed/JMTFBq4jbt0?modestbranding=1&rel=0&autoplay=1&controls=1&showinfo=0"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<div class="article">
 				<h4>Passive Voice</h4>
