--- a/mat1.html
+++ b/mat1.html
@@ -68,7 +68,7 @@
 		<h1><span>Matemática</span></h1>
 		<div>
 			   
-			<iframe width="300" height="400" src="https://www.youtube.com/embed/HlGPnHkX5Fo"
+			<iframe width="300" height="400" src="https://www.youtube.com/embed/HlGPnHkX5Fo?modestbranding=1&rel=0&autoplay=1&controls=1&showinfo=0"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<div class="article">	
 				<a href="mat2.html" class="previous">&laquo; Anterior</a> 
