--- a/mat5.html
+++ b/mat5.html
@@ -74,6 +74,9 @@
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<div class="article">
 				<h4>Exercícios sobre equação logarítmica pt1</h4>
+                                <a href="mat5.html" class="previous">&laquo; Anterior</a> 
+				<a href="mat6.html" class="next"> Próximo &raquo;</a>
+				
 			</div>
 		</div>
 	</div>
@@ -95,6 +98,7 @@
 				</li>
 			</ul>
 		</div>
+
 	</div>
 </body>
 </html>
