--- a/mat6.html
+++ b/mat6.html
@@ -75,6 +75,9 @@
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<div class="article">
 				<h4>Exercícios sobre equação logarítmica pt2</h4>
+                                <a href="mat2.html" class="previous">&laquo; Anterior</a> 
+				<a href="mat2.html" class="next"> Próximo &raquo;</a>
+				
 			</div>
 		</div>
 	</div>
