--- a/gallery-single-post1.html
+++ b/gallery-single-post1.html
@@ -77,8 +77,9 @@
 			<div class="article">
 				<h4>O movimento é relativo? (PDF)</h4>
 				<div class="container">
-					<iframe style='width:250px;height:500px' src='https://online.pubhtml5.com/sgof/hagn/'  seamless='seamless' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true' ></iframe>
-					<a href="" class="previous">&laquo; Anterior</a> 
+					<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+                                         <div class="elfsight-app-7c039e7e-059f-40e1-b16b-46eb7e7e687d"></div>
+                                <a href="" class="previous">&laquo; Anterior</a> 
 				<a href="gallery-single-post2.html" class="next"> Próximo &raquo;</a>
 				</div>
 				
