--- a/gallery-single-post1.html
+++ b/gallery-single-post1.html
@@ -75,7 +75,7 @@
 		<div>
 		  
 			<div class="article">
-				<h4>O movimento é relativo? (PDF)</h4>
+				<h4>Eletrostática(PDF)</h4>
 				<div class="container">
 					<script src="https://apps.elfsight.com/p/platform.js" defer></script>
                                          <div class="elfsight-app-7c039e7e-059f-40e1-b16b-46eb7e7e687d"></div>
