--- a/qui1.html
+++ b/qui1.html
@@ -75,6 +75,8 @@
 			<div class="article">
 				<h4>Hidrocarbonetos pt1</h4>
 			</div>
+			<a href="" class="previous">&laquo; Anterior</a> 
+                        <a href="gallery-single-post2.html" class="next">
 		</div>
 	</div>
 	<div id="footer">
