--- a/qui1.html
+++ b/qui1.html
@@ -76,7 +76,7 @@
 				<h4>Hidrocarbonetos pt1</h4>
 			</div>
 			<a href="" class="previous">&laquo; Anterior</a> 
-                        <a href="gallery-single-post2.html" class="next">
+                        <a href="qui2.html" class="next">Próximo &raquo;</a>
 		</div>
 	</div>
 	<div id="footer">
