--- a/qui2.html
+++ b/qui2.html
@@ -74,8 +74,8 @@
 			<div class="article">
 				<h4>Hidrocarbonetos pt2</h4>
 			</div>
-			<a href="" class="previous">&laquo; Anterior</a> 
-                        <a href="gallery-single-post2.html" class="next">Próximo &raquo;</a>
+			<a href="qui1.html" class="previous">&laquo; Anterior</a> 
+                        <a href="qui3.html" class="next">Próximo &raquo;</a>
 		</div>
 	</div>
 	<div id="footer">
