--- a/qui4.html
+++ b/qui4.html
@@ -74,11 +74,13 @@
 			<div class="article">
 				<h4>Hidrocarbonetos aromáticos pt2 (continuação)</h4>
 			</div>
+			<a href="qui3.html" class="previous">&laquo; Anterior</a> 
+                        <a href="qui5.html" class="next">Próximo &raquo;</a>
 		</div>
 	</div>
 	<div id="footer">
 		<div>
-			<p>&copy; 2023 by RiquezaXIX. All rights reserved.</p>
+			<p>&copy; 2020 by RiquezaXIX. All rights reserved.</p>
 			<ul>
 				<li>
 					<a href="https://twitter.com/InacioCM19"  target="_blank" id="twitter">twitter</a>
