--- a/qui6.html
+++ b/qui6.html
@@ -73,6 +73,8 @@
 			<div class="article">
 				<h4>Correcção da tarefa sobre Cicloalcanos</h4>
 			</div>
+			<a href="qui5.html" class="previous">&laquo; Anterior</a> 
+                        <a href="qui7.html" class="next">Próximo &raquo;</a>
 		</div>
 	</div>
 	<div id="footer">
