--- a/qui7.html
+++ b/qui7.html
@@ -73,11 +73,13 @@
 			<div class="article">
 				<h4>Cicloalcanos</h4>
 			</div>
+			<a href="qui6.html" class="previous">&laquo; Anterior</a> 
+                        <a href="" class="next">Próximo &raquo;</a>
 		</div>
 	</div>
 	<div id="footer">
 		<div>
-			<p>&copy; 2023 by RiquezaXIX. All rights reserved.</p>
+			<p>&copy; 2020 by RiquezaXIX. All rights reserved.</p>
 			<ul>
 				<li>
 					<a href="https://twitter.com/InacioCM19"  target="_blank" id="twitter">twitter</a>
