--- a/gallery-single-post3.html
+++ b/gallery-single-post3.html
@@ -73,6 +73,8 @@
 			  <div class="container">
 				<iframe style='width:250px;height:500px' src='https://online.pubhtml5.com/sgof/jdua/'  seamless='seamless' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true' ></iframe>
 			  </div>
+				 <a href="gallery-single-post2.html" class="previous">&laquo; Anterior</a> 
+				<a href="gallery-single-post4.html" class="next"> Próximo &raquo;</a>
 				
 			</div>
 		</div>
