--- a/gallery-single-post4.html
+++ b/gallery-single-post4.html
@@ -77,6 +77,8 @@
 				   Bom, camaradas...
 				</p>
 			</div>
+			 <a href="gallery-single-post3.html" class="previous">&laquo; Anterior</a> 
+				<a href="gallery-single-post5.html" class="next"> Próximo &raquo;</a>
 		</div>
 	</div>
 	<div id="footer">
