--- a/gallery-single-post6.html
+++ b/gallery-single-post6.html
@@ -76,6 +76,8 @@
 				<div class="container">
 				  <iframe style='width:250px;height:500px' src='https://online.pubhtml5.com/sgof/kwlb/'  seamless='seamless' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true' ></iframe>
 				</div>
+				 <a href="gallery-single-post5.html" class="previous">&laquo; Anterior</a> 
+				<a href="" class="next"> Próximo &raquo;</a>
 				
 		</div>
 	</div>
