--- a/gallery-single-post1.html
+++ b/gallery-single-post1.html
@@ -78,7 +78,7 @@
 			
 			<div class="article">
 				<h4>Circuito Elétrico</h4>
-                                <</div>
+                                </div>
 			        <a href="" class="previous">&laquo; Anterior</a> 
 				<a href="gallery-single-post2.html" class="next"> Próximo &raquo;</a>
 			</div>
